chore: 접수대기 디폴트